--- a/src/app/modules/users/login/login.component.html
+++ b/src/app/modules/users/login/login.component.html
@@ -1,1 +1,47 @@
-<p>login-page works!</p>
+<div class="content">
+	<div class="container">
+		<div class="d-flex justify-content-center h-100">
+			<div class="card">
+				<div class="card-header">
+					<h3>Inicio de Sesion</h3>
+					<div class="d-flex justify-content-end social_icon">
+						<!--<span><i class="fab fa-facebook-square"></i></span>-->
+						<span (click)="auth()"><i class="fab fa-google-plus-square"></i></span>
+						<!--<span><i class="fab fa-twitter-square"></i></span>-->
+					</div>
+				</div>
+				<div class="card-body">
+					<form>
+						<div class="input-group">
+							<div class="input-group-text input-icon">
+								<i class="fas fa-user"></i>
+							</div>
+							<input type="text" class="form-control" #userName required id="userName" placeholder="Usuario">
+							
+						</div>
+						<div class="input-group pt-10">
+							<div class="input-group-text input-icon"><i class="fas fa-key"></i></div>
+							<input type="password" class="form-control"  #userPassword required id="userPassword" placeholder="Contraseña">
+						</div>
+					  
+						<div class="row align-items-center remember pt-10">
+							<input type="checkbox">Recordar datos
+						</div>
+						<div class="form-group pt-10">
+							<input value="Iniciar Sesion" class="btn float-end login_btn"
+							(click)="signIn(userName.value, userPassword.value)">
+						</div>
+					</form>
+				</div>
+				<div class="card-footer">
+					<div class="d-flex justify-content-center links">
+						No tienes una cuenta?<a href="#">Registrate</a>
+					</div>
+					<div class="d-flex justify-content-center">
+						<a href="#">¿Olvidaste la contraseña?</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
