--- a/src/app/modules/core/cards/cards.component.html
+++ b/src/app/modules/core/cards/cards.component.html
@@ -5,14 +5,14 @@
         <button type="button" class="btn btn-primary btn-lg">Cartas Creadas</button>
     </div>-->
     <h2 style="text-align: center;">{{title}}</h2>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-bottom: 5px;">
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-bottom: 5px;">  
         <button class="btn btn-primary btn-lg" type="button" (click)="changeView()">
             {{buttonText}}
         </button>
     </div>
-    <div class="row row-cols-1 row-cols-md-6 g-4">
-        <div class="col marvel-card"  *ngFor="let card of cards">
-          <div class="card h-100">
+    <div class="row row-cols-1 row-cols-md-6 g-4" *ngIf="createCards">
+        <div class="col marvel-card"  *ngFor="let card of cardsToCreate">
+          <div class="card h-100" (click)="modalOpen()">
             <img src="{{imageurl}}{{card}}.jpg" class="card-img-top" alt="...">
             <!--<div class="card-footer">
               <small class="text-muted">Last updated 3 mins ago</small>
@@ -20,4 +20,57 @@
           </div>
         </div>   
     </div>
+
+    <div class="row row-cols-1 row-cols-md-6 g-4" *ngIf="!createCards">
+        <div class="col marvel-card"  *ngFor="let card of cards">
+          <div class="card h-100" (click)="modalOpen()">
+            <img src="{{imageurl}}{{card.image}}.jpg" class="card-img-top" alt="...">
+            <div class="card-footer h-100">
+              <small class="text-muted">Poder: {{ card.power }}</small> <br>
+              <small class="text-muted">Descripcion: {{ card.description }}</small>
+            </div>
+          </div>
+        </div>   
+    </div>
+
+    <app-create-card [showModalBox]="showModalBox" [image]="imageurl"></app-create-card>
 </div>
+
+<!-- Modal 
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Completa tu carta</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+                <div class="card">
+                  <img src="./../../../../assets/img/marvel cards/20.jpg" class="card-img-top" alt="...">
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="mb-3">
+                        <label for="power" class="form-label">Poder</label>
+                        <input type="text" class="form-control" id="power" placeholder="44" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Descripcion de la carta</label>
+                        <textarea class="form-control" id="description" rows="3" required></textarea>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Guardar</button>
+        </div>
+      </div>
+    </div>
+</div>
+  -->
+  
