login background update

--- a/src/app/modules/core/home/home.component.html
+++ b/src/app/modules/core/home/home.component.html
@@ -13,8 +13,6 @@
                 </button>
             </div>
 
-
-            
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title text-center">Crear Juego</h5>
@@ -36,7 +34,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="btn btn-primary mt-35">Iniciar Juego</a>
+                        <a class="btn btn-primary mt-35" (click)="initGame()">Iniciar Juego</a>
                     </div>
                     
                     <!--Form-->
