--- a/src/app/modules/landing/header/header.component.scss
+++ b/src/app/modules/landing/header/header.component.scss
@@ -3,3 +3,10 @@
     height: auto;
     margin-right: 5px;
 }
+
+.logo{
+    margin-bottom: -22px;
+    margin-top: -10px;
+    margin-left: 20px;
+    height: 8.5vh;
+}
