--- a/src/app/modules/landing/header/header.component.html
+++ b/src/app/modules/landing/header/header.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-absolute w-100" >
   <div class="container-fluid ms-auto mb-2 mb-lg-0">
-    <a class="text-white navbar-brand cursor-pointer" routerLink="game/home">SofkaCardGame</a>
+    <a class="text-white navbar-brand cursor-pointer" routerLink="game/home">
+      <img src="./../../../../assets/img/gameLogo.png" class="logo" alt="...">
+    </a><!--SofkaCardGame-->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
