--- a/src/app/modules/users/login/login.component.html
+++ b/src/app/modules/users/login/login.component.html
@@ -34,11 +34,11 @@
 					</form>
 				</div>
 				<div class="card-footer">
-					<div class="d-flex justify-content-center links" routerLink="/register">
-						No tienes una cuenta?<a href="#">Registrate</a>
+					<div class="d-flex justify-content-center links" >
+						No tienes una cuenta?<a routerLink="/register">Registrate</a>
 					</div>
-					<div class="d-flex justify-content-center" routerLink="/forgot-password">
-						<a href="#">¿Olvidaste la contraseña?</a>
+					<div class="d-flex justify-content-center" >
+						<a routerLink="/forgot-password">¿Olvidaste la contraseña?</a>
 					</div>
 				</div>
 			</div>
