--- a/src/app/modules/users/register/register.component.html
+++ b/src/app/modules/users/register/register.component.html
@@ -1,1 +1,43 @@
-<p>register works!</p>
+<div class="content">
+	<div class="container">
+		<div class="d-flex justify-content-center h-100">
+			<div class="card">
+				<div class="card-header">
+					<h3>Registrate</h3>
+					<div class="d-flex justify-content-end social_icon">
+						<!--<span><i class="fab fa-facebook-square"></i></span>
+						<span><i class="fab fa-google-plus-square"></i></span>-->
+						<!--<span><i class="fab fa-twitter-square"></i></span>-->
+					</div>
+				</div>
+				<div class="card-body">
+					<form>
+						<div class="input-group">
+							<div class="input-group-text input-icon">
+								<i class="fas fa-user"></i>
+							</div>
+							<input type="text" class="form-control" #userName required id="userName" placeholder="Ingresa un correo">
+							
+						</div>
+						<div class="input-group pt-10">
+							<div class="input-group-text input-icon"><i class="fas fa-key"></i></div>
+							<input type="password" class="form-control"  #userPassword required id="userPassword" placeholder="Contraseña">
+						</div>
+					  
+						<div class="row align-items-center remember pt-10">
+							<!--<input type="checkbox">Recordar datos-->
+						</div>
+						<div class="form-group pt-10">
+							<input value="Registrarse" class="btn float-end login_btn" (click)="signUp(userName.value, userPassword.value)">
+						</div>
+					</form>
+				</div>
+				<div class="card-footer">
+					<div class="d-flex justify-content-center links" >
+                        ¿Ya tienes una cuenta?<a routerLink="/login">Iniciar sesión</a>
+					</div> 
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
