--- a/src/app/modules/core/home/home.component.html
+++ b/src/app/modules/core/home/home.component.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="card" style="height: 12vh; margin-top: 5%;">
                             <div class="row g-0">
-                                <div class="col-md-4" style="height: 39%; text-align: center; ">
+                                <div class="col-md-4" style="height: 39%; text-align: center;">
                                     <img src="./../../../../assets/img/avatar.jpg" class="img-fluid rounded-start" alt="..." style="height: 100%;">
                                 </div>
                                 <div class="col-md-8">
@@ -33,9 +33,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <a class="btn btn-primary mt-35" (click)="initGame()">Iniciar Juego</a>
+                        </div>                       
                     </div>
+                    <a *ngIf="waitingUsers" class="btn btn-primary mt-35" (click)="initGame()">Iniciar Juego</a>
                     
                     <!--Form-->
                     <div *ngIf="!waitingUsers">
@@ -52,9 +52,46 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
+    </div>
+</div>
+
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+    <div class="modal-dialog" role="document">
+        <!--<form id="create-game-card" [formGroup]="cardForm" (ngSubmit)="createCard()">-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Perfil</h5>
+                </div>
+                <div class="modal-body row row-cols-1 row-cols-md-2 g-4">
+                    <!--<div class="col">
+                        <div class="card">
+                            <img src="{{ imageurl }}{{image}}.jpg" class="card-img-top" alt="...">
+                        </div>
+                    </div>-->
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="mb-3">
+                                    <label for="power" class="form-label">Poder</label>
+                                    <input type="text" class="form-control" id="power" placeholder="44" name="power"
+                                        formControlName="poder" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="description" class="form-label">Descripcion de la carta</label>
+                                    <textarea class="form-control" id="description" rows="3" name="description"
+                                        formControlName="descripcion" required></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" (click)="closePopup()">Close</button>
+                </div>
+            </div>
+        <!--</form>-->
     </div>
 </div>
 
