--- a/src/app/modules/core/create-card/create-card.component.html
+++ b/src/app/modules/core/create-card/create-card.component.html
@@ -8,7 +8,7 @@
                 <div class="modal-body row row-cols-1 row-cols-md-2 g-4">
                     <div class="col">
                         <div class="card">
-                            <img src="{{ imageurl }}{{image}}.jpg" class="card-img-top" alt="...">
+                            <img src="./../../../../assets/img/marvel-cards/{{image}}.jpg" class="card-img-top" alt="...">
                         </div>
                     </div>
                     <div class="col">
