--- a/src/app/modules/landing/header/header.component.html
+++ b/src/app/modules/landing/header/header.component.html
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark position-absolute w-100" >
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark position-absolute w-100">
   <div class="container-fluid ms-auto mb-2 mb-lg-0">
     <a class="text-white navbar-brand cursor-pointer" routerLink="game/home">
       <img src="./../../../../assets/img/gameLogo.png" class="logo" alt="...">
-    </a><!--SofkaCardGame-->
+    </a>
+    <!--SofkaCardGame-->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -13,18 +14,18 @@
           <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             <em class="fas fa-user"></em>
-            {{ loggedUser }}
+            {{ userName }}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li (click)="openProfileInfo()">
+            <li (click)="openPopup()">
               <i class="fa-solid fa-cards-blank"></i>
-              <a class="dropdown-item " >
+              <a class="dropdown-item ">
                 Perfil
               </a>
             </li>
             <li *ngIf="admin" routerLink="/game/cards">
               <i class="fa-solid fa-cards-blank"></i>
-              <a class="dropdown-item " >
+              <a class="dropdown-item ">
                 Gestionar cartas
               </a>
             </li>
@@ -40,3 +41,42 @@
     </div>
   </div>
 </nav>
+
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+  <div class="modal-dialog" role="document">
+    <form id="create-game-card" [formGroup]="profileForm" (ngSubmit)="updateUser()">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Perfil</h5>
+        </div>
+        <div class="modal-body row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="./../../../../assets/img/avatar.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="text" class="form-control" id="email" placeholder="@email" name="email"
+                    formControlName="email" required>
+                </div>
+                <!--<div class="mb-3">
+                <label for="description" class="form-label">Descripcion de la carta</label>
+                <textarea class="form-control" id="description" rows="3" name="description"
+                  formControlName="descripcion" required></textarea>
+              </div>-->
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" (click)="closePopup()">Close</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
