Roles created and applied

--- a/src/app/modules/landing/header/header.component.html
+++ b/src/app/modules/landing/header/header.component.html
@@ -23,7 +23,7 @@
                 Perfil
               </a>
             </li>
-            <li *ngIf="admin" routerLink="/game/cards">
+            <li *ngIf="isAdmin" routerLink="/game/cards">
               <i class="fa-solid fa-cards-blank"></i>
               <a class="dropdown-item ">
                 Gestionar cartas
