--- a/src/app/modules/core/game/game.component.sass
+++ b/src/app/modules/core/game/game.component.sass
@@ -1,7 +1,61 @@
-.container-game
-    background-image: url('./../../../../assets/img/board-complete.jpg') no-repeat 0 0
-    border: 1px solid black
-    background-repeat: no-repeat
+.container
+    margin-left: 15vw
+    border: 1px solid blue
+    //margin-top: 20px
+    width: 100vw
+    height: 100vh
+
+.content
+    background-image: url('./../../../../assets/img/board-complete.jpg')
     background-size: 100% 100%
-   
+    width: 100%
+    height: 91.9vh
+
+.deck-h
+    //border: 1px solid black
+    height: 17%
+    width: 35%
+
+.deck-v
+    //border: 1px solid black
+    width:11%
+    height:38.2%
+
+.deck1
+    top: 81vh
+    left: 32.3vw
     position: fixed
+
+.deck2
+    top: 12vh
+    left: 32.3vw
+    position: fixed
+
+.deck3
+    top: 14vh
+    left: 19.3vw
+    position: fixed
+
+.deck4
+    top: 56vh
+    left: 19.3vw
+    position: fixed
+
+.deck5
+    top: 56vh
+    left: 72.5vw
+    position: fixed
+
+.deck6
+    top: 14vh
+    left: 72.5vw
+    position: fixed
+
+.marvel-card:hover
+    transform: scale(1.05)
+    box-shadow: 0 40px 60px -20px rgba(12, 5, 62, 0.15)
+     z-index: 100
+
+.card-v
+    height: 50%
+
