--- a/src/app/modules/landing/header/header.component.html
+++ b/src/app/modules/landing/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark position-absolute w-100">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark position-absolute w-100" style="margin-bottom: 100px;">
   <div class="container-fluid ms-auto mb-2 mb-lg-0">
     <a class="text-white navbar-brand cursor-pointer" routerLink="game/home">
       <img src="./../../../../assets/img/gameLogo.png" class="logo" alt="...">
