Cards anmation init

--- a/src/app/modules/core/game/game.component.sass
+++ b/src/app/modules/core/game/game.component.sass
@@ -59,3 +59,10 @@
 .card-v
     height: 50%
 
+.fight
+    top: 35vh
+    left: 32.3vw
+    position: fixed
+    height: 37%
+    width: 35%
+    border: 2px solid white
