--- a/src/app/modules/core/game/game.component.html
+++ b/src/app/modules/core/game/game.component.html
@@ -1,11 +1,15 @@
 <app-header></app-header>
 <div class="container">
-    <div class="content" style="margin-top: 7.8vh;">
+    <div class="content" style="margin-top: 7.8vh;" cdkDropListGroup>
+
+        <div class="fight" cdkDropList (cdkDropListDropped)="drop($event)">
+
+        </div>
 
         <!--Deck 1-->
-        <div class="deck-h deck1">
-            <div class="row row-cols-1 row-cols-md-6 g-4">
-                <div class="col marvel-card"  *ngFor="let card of cards1">
+        <div class="deck-h deck1" cdkDropList>
+            <div class="row row-cols-1 row-cols-md-6 g-4" *ngIf="cards1" (cdkDropListData)="cards1">
+                <div class="col marvel-card"  *ngFor="let card of cards1" cdkDrag >
                   <div class="card h-100">
                     <img src="./../../../../assets/img/marvel-cards/{{card}}.jpg" class="card-img-top" alt="...">
                     <div class="card-footer h-100">
@@ -57,7 +61,7 @@
             </div>
         </div>
 
-         <!--Deck 3-->
+         <!--Deck 6-->
          <div class="deck-v deck6">
             <div class="col" *ngFor="let card of cards1"  style="height:auto;padding-bottom: 3px;">
                 <div class="card h-25" style="width: 7vw; justify-content: left;">
@@ -69,8 +73,3 @@
     </div>
 </div>
 
-<!--
- 
-    <div class="row row-cols-md-1"  style="height: 100%; border: 1px solid;">
-            </div>
--->
