--- a/src/app/modules/core/game/game.component.sass
+++ b/src/app/modules/core/game/game.component.sass
@@ -60,9 +60,9 @@
     height: 50%
 
 .fight
-    top: 35vh
+    padding:30px
+    top: 40vh
     left: 32.3vw
     position: fixed
-    height: 37%
+    height: 27%
     width: 35%
-    border: 2px solid white
