--- a/src/app/modules/landing/header/header.component.html
+++ b/src/app/modules/landing/header/header.component.html
@@ -1,57 +1,47 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark position-absolute w-100" style="margin-bottom: 100px;">
-  <div class="container-fluid ms-auto mb-2 mb-lg-0">
-    <a class="text-white navbar-brand cursor-pointer" routerLink="game/home">
-      <img src="./../../../../assets/img/gameLogo.png" class="logo" alt="...">
-    </a>
-    <!--SofkaCardGame-->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <em class="fas fa-user"></em>
-            {{ userName() }}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-labelledby="main-navbar">
+  <a class="navbar-brand cursor-pointer" routerLink="game/home">
+    <img src="./../../../../assets/img/betting-logo.png" alt="Betting Game" width="115">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Betting Game">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse justify-content-end" id="main-navbar">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown-center">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <em class="fas fa-user fa-lg"></em>
+          <strong>{{ userName() }}</strong>
+        </a>
+        <div class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item cursor-pointer" data-bs-toggle="modal" data-bs-target="#profile-modal">
+            Perfil
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li>
-              <a class="dropdown-item cursor-pointer">
-                Perfil
-              </a>
-            </li>
-            <li *ngIf="isAdmin()" routerLink="/game/cards">
-              <a class="dropdown-item cursor-pointer">
-                Gestionar cartas
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item cursor-pointer" *ngIf="isLogged()" (click)="signOut()">
-                <em class="fa-solid fa-arrow-right-to-bracket"></em>
-                Cerrar Sesion
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
+          <a class="dropdown-item cursor-pointer" *ngIf="isAdmin()" routerLink="/game/cards">
+            Gestionar Cartas
+          </a>
+          <a class="dropdown-item cursor-pointer" *ngIf="isLogged()" (click)="signOut()">
+            <em class="fa-solid fa-arrow-right-to-bracket"></em>
+            Cerrar Sesión
+          </a>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
 
-
-<div class="modal" tabindex="-1" role="dialog">
+<div class="modal" id="profile-modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
-    <form id="create-game-card" (ngSubmit)="updateUser()">
+    <form id="create-game-card">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="staticBackdropLabel">Perfil</h5>
         </div>
         <div class="modal-body row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
-            <div class="card">
-              <img src="./../../../../assets/img/avatar.jpg" class="card-img-top" alt="...">
+            <div class="card" id="profile-image">
+              <img src="./../../../../assets/img/avatar.jpg" *ngIf="!hasImage()" class="card-img-top" alt="Default image">
+              <img [src]="userImage()" *ngIf="hasImage()" class="card-img-top" alt="Profile image">
             </div>
           </div>
           <div class="col">
@@ -59,20 +49,14 @@
               <div class="card-body">
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="email" placeholder="@email" name="email"
-                    formControlName="email" required>
+                  <input readonly type="text" class="form-control" id="email" placeholder="@email" name="email" value="{{ userEmail() }}" required>
                 </div>
-                <!--<div class="mb-3">
-                <label for="description" class="form-label">Descripcion de la carta</label>
-                <textarea class="form-control" id="description" rows="3" name="description"
-                  formControlName="descripcion" required></textarea>
-              </div>-->
               </div>
             </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger">Close</button>
+          <button type="button" class="btn btn-danger" data-bs-target="#profile-modal" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </form>
