Change home style

--- a/src/app/modules/landing/header/header.component.sass
+++ b/src/app/modules/landing/header/header.component.sass
@@ -1,7 +1,5 @@
-$nav-background: url('https://images.unsplash.com/photo-1612036782180-6f0b6cd846fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWFydmVsfGVufDB8fDB8fA%3D%3D&w=1000&q=80')
-
 .navbar
-    background-image: $nav-background
+    opacity: 0.7
     padding: 0 20px
 
 #profile-image, #profile-image img
@@ -9,3 +7,6 @@ $nav-background: url('https://images.unsplash.com/photo-1612036782180-6f0b6cd846
 
 .fa-user
     padding-right: 5px
+
+.dropdown-menu
+    right: 0
