--- a/src/app/modules/core/home/home.component.html
+++ b/src/app/modules/core/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<div class="content">
-    <div class="row row-cols-1 row-cols-md-2 g-4" style="padding: 1%;">
+<div class="content d-flex align-items-center">
+    <div id="home-columns" class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col mt-35">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
