--- a/src/app/modules/core/home/home.component.sass
+++ b/src/app/modules/core/home/home.component.sass
@@ -1,7 +1,13 @@
 .content
-    width: 100vw
-    height: 100vh
+    width: 100%
+    height: 100%
+    position: absolute
     background-color: #19273b
+    z-index: -1
+    top: 0
+    background-image: url(/assets/img/game-background.jpg)
+    background-size: cover
+    background-repeat: no-repeat
     
 .form
     box-shadow: 5px 10px 18px #212529
@@ -84,6 +90,10 @@
                 --duration: 1s
                 transform-origin: 50% 100%
                 animation: drive var(--duration) linear var(--d)
+
+#home-columns
+    width: 100%
+    padding: 20px
                
 @keyframes move 
     40% 
